[package]
name = "superdev-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12.20", features = ["json"]}
axum = {version = "0.8.1", features = ["macros"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
solana-sdk = "2.3.1"
tokio = { version = "1.45.1", features = ["full"] }
spl-token = "8.0.0"
solana-client = "2.3.2"
base64 = "0.22.1"
spl-associated-token-account = "7.0.0"
solana-keypair = "2.2.3"
bs58 = "0.5.1"
